Closed
Bug 1370005
Opened 8 years ago
Closed 8 years ago
Crash in mozilla::MozPromise<T>::ThenInternal
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
RESOLVED
FIXED
mozilla55
People
(Reporter: marcia, Assigned: jwwang)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is
report bp-7c9ac719-764c-4b9a-b126-1fe920170603.
=============================================================
Seen while looking at crash stats - so far 8 crashes/7 installs: http://bit.ly/2rvDLFH. 1 crash also present in 53.0.3
Possible regression range based on build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=bdb2387396b4a74dfefb7c983733eed3625e906a&tochange=aeb3d0ca558f034cbef1c5a68bd07dd738611494
Assignee | ||
Comment 2•8 years ago
|
||
https://hg.mozilla.org/mozilla-central/annotate/aeb3d0ca558f/dom/media/MediaFormatReader.cpp#l1975
decoder.mDecoder->Decode() calls InvokeAsyncImpl() which generates a new |PromiseType::Private|. I can't see how |mHaveRequest| is true for a newly created MozPromise.
Assignee | ||
Comment 3•8 years ago
|
||
Seeing 55 is going to beta soon, let's backout bug 1367679 to see if that mitigates the crash.
Blocks: 1367679
Comment hidden (mozreview-request) |
Assignee: nobody → jwwang
Flags: needinfo?(gsquelart)
Comment 5•8 years ago
|
||
mozreview-review |
Comment on attachment 8874318 [details]
Bug 1370005. P1 - backout bug 1367679.
https://reviewboard.mozilla.org/r/145668/#review149592
:-(
Attachment #8874318 -
Flags: review?(gsquelart) → review+
Assignee | ||
Comment 6•8 years ago
|
||
:( I will land bug 1367679 to 56 so we have more time debugging.
Keywords: leave-open
Pushed by jwwang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/02b76f664ebb
P1 - backout bug 1367679. r=gerald
Assignee | ||
Comment 8•8 years ago
|
||
https://crash-stats.mozilla.com/signature/?version=55.0a1&signature=mozilla%3A%3AMozPromise%3CT%3E%3A%3AThenInternal&date=%3E%3D2017-05-05T06%3A31%3A47.000Z&date=%3C2017-06-05T06%3A31%3A47.000Z&_columns=date&_columns=product&_columns=version&_columns=build_id&_columns=platform&_columns=reason&_columns=address&_columns=install_time&_sort=-date&page=1#correlations
(94.12% in signature vs 24.52% overall) Addon "onboarding@mozilla.org" = true
what is this addon?
Assignee | ||
Comment 9•8 years ago
|
||
Now I am quite sure bug 1367679 is innocent. We have bp-c1912aa5-f209-432c-83c4-81a700170603 even without bug 1367679.
No longer blocks: 1367679
Comment 10•8 years ago
|
||
status-firefox54:
--- → affected
Comment 11•8 years ago
|
||
This might be fixed on 55 in bug 1345342, but we'll have to check back in a couple of days to make sure.
tracking-firefox54:
--- → -
tracking-firefox55:
--- → +
Comment 12•8 years ago
|
||
these crashes have gone away with the landing of bug 1370805
Updated•8 years ago
|
status-firefox-esr52:
--- → unaffected
Depends on: 1370805
Keywords: leave-open
Target Milestone: --- → mozilla55
You need to log in
before you can comment on or make changes to this bug.
Description
•