Bug 1370005. P1 - backout bug 1367679. r=gerald

MozReview-Commit-ID: 4SUCinaz3Cj